putumayo english format edits

--- a/bp-putumayoenglish.html
+++ b/bp-putumayoenglish.html
@@ -175,21 +175,18 @@ To understand the political climate in the fall of 2016 in Colombia, you can rea
 <hr>
 <br>
 <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloriamap.png" width="351" height="287" />
-<h4>Where is <i>La Carmelita</i>?</h4>
+<h3>Where is <i>La Carmelita</i>?</h3>
 The <i>vereda</i> of La Carmelita is in the municipality of Puerto Asís, department of Putumayo. In 2016 this <i>vereda</i> became one of the 23 rural areas where FARC combatants demobilized, and which today are known as Territorial Spaces for Training and Reincorporation (Espacios Territoriales de Capacitación y Reincorporación, ETCR). During the fall of 2017, Puerto Asís was one of the first municipalities in the country where land titles were given to peasants in Putumayo. This distribution was an incentive for the peasants who, after many years of cultivating coca, decided to return to lawfulness by planting legal crops such as cacao, sugar cane, cassava and pepper. According to government sources, by the end of 2017, about 400 property titles were distributed in Putumayo.
 <br>&nbsp;<br>
 <hr>
 <br>&nbsp;<br>
 
- <h2 id="biblioteca-pública-móvil-las-morras">Work in <i>La Carmelita</i></h2>
+ <h3 id="biblioteca-pública-móvil-las-morras">Work in <i>La Carmelita</i></h3>
    <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria8.png" width="300" height="200" />
-   <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria7.png" width="300" height="200" />
-  <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria4.png" width="200" height="233" />
-  <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria5.png" width="200" height="233" />
-  <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria6.png" width="200" height="233" />
-</span><br>
-<p>
-The Mobile Library in La Carmelita was installed in a building in the center of the <i>vereda</i> that the inhabitants use for their social events. There the librarians lived for a year with the inhabitants of the village, organizing writing workshops and promoting reading among young children and adults. There were photography workshops, film cycles, and computer workshops. Campaigns designed at the national level were inserted into the community and resonated with library users. Significant examples of these campaigns were <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Gloriapazalbosque.pdf"><b><i>"Paz al Bosque" (Peace in the Forest)</i><b></a>, in which the National Library of Colombia and the Caro y Cuervo Institute joined forces during 2018 to promote social change through creative writing. Another notable example was the <i>"Books, Color and Jungle"</i> campaign, which in addition to providing books for libraries, helped to promote reading among the youngest through stories and poetry.
+</span>
+
+<p>The Mobile Library in La Carmelita was installed in a building in the center of the <i>vereda</i> that the inhabitants use for their social events. There the librarians lived for a year with the inhabitants of the village, organizing writing workshops and promoting reading among young children and adults. There were photography workshops, film cycles, and computer workshops. Campaigns designed at the national level were inserted into the community and resonated with library users. Significant examples of these campaigns were <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Gloriapazalbosque.pdf"><b><i>"Paz al Bosque" (Peace in the Forest)</i><b></a>, in which the National Library of Colombia and the Caro y Cuervo Institute joined forces during 2018 to promote social change through creative writing. Another notable example was the <i>"Books, Color and Jungle"</i> campaign, which in addition to providing books for libraries, helped to promote reading among the youngest through stories and poetry.</p>
+<p><span class="image right"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria5.png"/></span>
 <br>&nbsp;<br>
 The most important thing of all is that all these cultural activities helped to promote dialogue: listening, and above all, speaking. And it is well-known that the well-exercised words help to heal.
 <br>&nbsp;<br>
