--- a/bpm-conejoenglish.html
+++ b/bpm-conejoenglish.html
@@ -61,9 +61,9 @@
 
   <header>
     <h2>Gilberto Pabón Sandoval</h2>
-	<b>Gilberto is a Librarian for Peace in the corregimiento of Conejo, Fonseca, La Guajira, Colombia <br>
-	from February 26, 2017 to December 23, 2017,<br>
-and in the Los Robles La Paz municipality of the Cesar Department in the Valledupar <br>
+	<b>Gilberto was a Librarian for Peace in the <i>corregimiento</i> of Conejo (Fonseca), La Guajira, Colombia <br>
+	from February 26, 2017 to December 23, 2017.<br>
+He also worked in Robles (La Paz, César) in the Valledupar <br>
 metropolitan area from February 13, 2018 to December 22, 2018.
 
 
@@ -74,14 +74,15 @@ metropolitan area from February 13, 2018 to December 22, 2018.
 <div style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 50px 0px 50px;">
 <table width="50%" border="1" cellpadding="0" cellspacing="0">
 <tr valign="top">
-<td><center><img align src="http://people.virginia.edu/~mav4n/BPMP/images/Gilberto.jpg" width="260" height="260" /></center><br>
+<td><center><img align src="http://people.virginia.edu/~mav4n/BPMP/images/gilbertoehijo.jpg" width="260" height="260" /></center><br>
 <ul>
 Gilberto tells us:<br>
-<i> "I am a cultural manager and promoter of reading with law studies at the Libre University."
-<p>"My experience started in the Cultural Corporation Public Library Julio Pérez Ferrero, in the city of Cúcuta Norte de Santander. There I worked developing functions as a tutor and promoter of reading in the Municipal Reading and Writing Network of Cúcuta, led by the City Hall of San José de Cúcuta, which aims to promote reading and writing in children, youth, adults and seniors of the city of Cúcuta, with a particular focus on the populations in vulnerable positions regarding their rights.
-</p><p>We managed, within the framework of this important and valuable initiative, to design library extension services for communities in different neighborhoods of Cúcuta, to create innovative activities to promote reading and culture, such as the "Lunadas Literarias" that were recognized as examples for the country by the Ministry of Culture of Colombia. We also were able to design educational and cultural activities around the book and cinema from the "Biblioexpress" (a mobile library that visited the neighborhoods and nearby municipalities of the city of Cúcuta).
-</p><p>Also, I am the founder of the Cultural Corporation of Reading and Writing of the municipality Los Patios. I participated in the project of Mobile Public Libraries of the Ministry of Culture in 2017, I was also a librarian in the public libraries project for the paths of peace developed in 2018 by the Ministry of Culture.
-</p><p>Currently I work as coordinator of the Cultural Corporation of Reading and Writing that is dedicated to creating strategic reading and writing plans with innovative character.
+<br>
+<i> "I am a cultural manager and reading promotor with a background in legal studies at the Universidad Libre.
+<p>My experience started in the Cultural Corporation Public Library Julio Pérez Ferrero, in the city of Cúcuta, Norte de Santander. There I worked as a tutor and reading promoter in the Municipal Reading and Writing Network of Cúcuta, which is led by the City Hall of San José de Cúcuta and aims to promote reading and writing among children, youth, adults and senior citenzs in Cúcuta, with a particular focus on the rights of people in vulnerable positions.
+</p><p>We managed, within the framework of this important and valuable initiative, to design library extension services for communities in different neighborhoods of Cúcuta, creatomg innovative activities to promote reading and culture, such as the "Lunadas Literarias," which were recognized as examples for the country by the Colombian Ministry of Culture. We were also able to design educational and cultural activities around books and cinema through the "Biblioexpress" (a mobile library that visited the neighborhoods of Cúcuta and nearby municipalities.
+</p><p>Also, I am the founder of the Cultural Corporation of Reading and Writing of the town of Los Patios. I participated in the Ministry of Culture's Mobile Public Libraries Project in 2017. I was also a librarian in the Paths for Peace public library initiative developed in 2018 by the Ministry of Culture.
+</p><p>Currently, I work as coordinator of the Cultural Corporation of Reading and Writing, which is dedicated to creating strategic reading and writing plans with an innovative character."
 </li>
 </ul>
 </td>
@@ -90,14 +91,14 @@ Gilberto tells us:<br>
 </div>
 
 
- <h2 id="biblioteca-pública-móvil-las-morras">El trabajo en la Biblioteca Pública Rural de Conejo</h2>
+ <h2 id="biblioteca-pública-móvil-las-morras">Work in the Rural Public Library of Conejo</h2>
   <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gilbertomap.png" width="351" height="287" />
   <br>
   <iframe width="300" height="150" src="https://www.youtube.com/embed/vwSxIpu6zPE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
   </iframe><br>FARC building memory in Conejo
   <br>
 <h4>Where is Conejo?</h4>
-The corregimiento Conejo is located in the municipality of Fonseca within the department of La Guajira. It has around 2500 inhabitants and is the largest district of the three that Fonseca has. It has very fertile land, so the main economy is agriculture and livestock. The production of coffee stands out and the <a target="_blank" href="http://www.fonseca-guajira.gov.co/soyfestivaldelcafe/Paginas/default.aspx"><b>Coffee Festival</b></a>, celebrated every December for 16 years, is famous in the area. Due to its proximity to the Venezuelan border, Conejo was one of the main routes to Venezuela and it was also a region where the guerrillas were furnished with supplies. It was precisely in February 2016 when Conejo received all the international attention because this corregimiento was chosen by the <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/Documents/Conejo1Farc.pdf"><b>FARC</b></a> to make public its presence for the first time and to socialize with the troops stationed in this region.
+The <i>corregimiento</i> of Conejo is located in the municipality of Fonseca in the department of La Guajira. It has around 2500 inhabitants and is the largest district of the three that constitute Fonseca. It has very fertile land, so the main economic activities are related to agriculture and livestock. The production of coffee stands out and the <a target="_blank" href="http://www.fonseca-guajira.gov.co/soyfestivaldelcafe/Paginas/default.aspx"><b>Coffee Festival</b></a>, celebrated every December for the past 16 years, is famous in the area. Due to its proximity to the Venezuelan border, Conejo was one of the main routes to Venezuela and it was also a region where the guerrillas were furnished with supplies. Conejo received substantial international attention in February 2016, when it was chosen by the <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/Documents/Conejo1Farc.pdf"><b>FARC</b></a> to make its presence public for the first time and to socialize with the troops stationed in this region.
 <br>&nbsp;<br>
 <hr>
 <br>&nbsp;<br>
@@ -107,33 +108,31 @@ The corregimiento Conejo is located in the municipality of Fonseca within the de
 <img src="http://people.virginia.edu/~mav4n/BPMP/images/Gilberto2.jpg" width="403" height="269" />
   <br>
 <iframe width="400" height="250" src="https://www.youtube.com/embed/LNEcUmoScys" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br>Rural Public Library at Conejo'<i>Corregimiento</i>, in Fonseca. February 2017; (3 '56 ")
+<br>Rural Public Library of Conejo'<i>Corregimiento</i>, in Fonseca. February 2017; (3 '56 ")
 <br>&nbsp;<br>
 <iframe width="400" height="250" src="https://www.youtube.com/embed/jxMMxYMTrSQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>Presentation of the project: "Public Libraries on the <i>veredas</i> and paths of peace" <br>May 15, 2018; (3 '56 ")
 </span>
-<i>"When the Mobile Public Library arrived at the hands of Gilberto" It came as a miracle," say its residents, a miracle that has brought together the entire community around books, tablets and computers. The School of Music Vallenata is a nursery where children and young people learn to play accordion, guitar, 'cajón' and guacharaca, In addition, with the help of a group of artists and the community, adorned the streets of the village in color with 20 murals that feature the history of the locality. "</i><br> National Library, September 2018.
+When the Mobile Public Library arrived under Gilberto's leadership, <i>"It came as a miracle</i>," say residents. A miracle that has brought together the entire community around books, tablets and computers. The School of Música Vallenata is a place where children and young people learn to play accordion, guitar, 'cajón' and guacharaca. Furthermore, with the help of a group of artists and the community, library workers adorned the town streets with 20 colorful murals that illustrate local history. "</i><br> –National Library, September 2018.
 <br>
 <center>
-<img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" width="40%" height="3" alt="" />
+<hr>
 </center>
-<br>
-<p><i>"The Ministry of Culture indicated that one of the main projects, since the beginning of the library, was the recovery of the traditions of the town, among them, the love for vallenato. This project stems from the fact that in Conejo several years ago there was a group called the Dinastia Vallenata, which brought together some of the best talent in the area, however, the group had disintegrated and it was thanks to the library that some of its members and heirs of the tradition met again to compose and perform songs alluding to peace, to the people, and to what the library means to the community.
+<p><i>"The Ministry of Culture indicated that one of the main projects, since the beginning of the library, was the recovery of the towns' traditions, such as the love for vallenato. This project stems from the fact that in Conejo, several years ago there was a group called the Dinastía Vallenata, which brought together some of the best talent in the area. However, the group had disintegrated and it was thanks to the library that some of its members and and other heirs of the tradition met again to compose and perform songs alluding to peace, the people, and what the library means to the community.
  </p><p>
-This resurgence of the group motivated the library and the municipal administration to adapt a space to create the Vallenata Music School of the Conejo Library, a space that has become a hotbed of new talent, where children and young people compose songs and learn to play accordion, guitar, cajón and guacharaca.
+This resurgence of the group motivated the library and the municipal administration to convert a space into the School of Música Vallenata, which has become a hotbed of new talent where children and young people compose songs and learn to play accordion, guitar, cajón and guacharaca.
   </p><p>
-The sense of appropriation shared among the inhabitants of Conejo of its library is reflected in the streets of the corregimiento. A group of artists, with the support of the community, embodied the customs of their people in 20 murals that tell the history of the town, a story that, like a good vallenato, will say that one day a library arrived in their town and the community clung to her so much that she did not let it go. "
-
+The sense of ownership that the inhabitants of Conejo shared regarding their library is reflected in the streets of the <i>corregimiento</i>. The 20 murals that cover the town streets embody the customs of its people, telling the history of the town– a story that, like a good vallenato, will say that one day a library arrived and the community latched on, and did not let go."
 <a target="_blank" href="https://elpilon.com.co/biblioteca-de-conejo-gano-reconocimiento-daniel-samper-ortega/"><b>El Pilón https://elpilon.com.co/</b></a>
 <br>
 
 <hr>
 <br>
-<a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Conejopacifista.pdf"><b><i>"In La Guajira, peace begins in a library" </i></b>"</a> headlines an article in the <a target="_blank" href="https://pacifista.tv/"><b>Pacifista</b></a>, written by María Rodríguez, on October 8, 2018.
+<a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Conejopacifista.pdf"><b><i>"In La Guajira, peace begins in a library" </i></b></a>– article written by María Rodríguez and published in <a target="_blank" href="https://pacifista.tv/"><b>Pacifista</b></a> on October 8, 2018.
 
-Maria wrote this article to publicly acknowledge the awarding of the Daniel Samper Ortega National Prize for Public Libraries 2018 to the Rural Public Library of the Conejo' Corregimiento. The prize recognized this library as the best public library in the country.
+María wrote this article to publicly acknowledge the Daniel Samper Ortega National Prize for Public Libraries awarded in 2018 to the Rural Public Library of Conejo. The prize recognized this library as the best public library in the country.
 
-This article, which deserves <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Conejopacifista.pdf"><b>to be read</b></a>, tells how this library emerged from the evolution of the Mobile Library for Peace that started at the hands of Gilberto in the beginning of November 2016.
+This article, which deserves <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Conejopacifista.pdf"><b>to be read</b></a>, tells how this Rural Public Library developed out of the Mobile Library for Peace that started under Gilberto's leadership in the early November, 2016.
 
  <br>
  <hr>
@@ -161,50 +160,50 @@ This article, which deserves <a target="_blank" href="http://people.virginia.edu
 </iframe><br><i>The Award in Caracol Noticias</i>
 
 <center>
-<h4>The song of the prize: Sin miedo (Without fear)</h4><br>
-It's nice the times of yesterday, where there was no violence<br>
+<h4>The prize-winning song: Sin miedo (Without fear)</h4><br>
+Ay, how lovely the times of yesterday, where there was no violence<br>
 Nor was there war, everything was happiness<br>
 My God, so much destruction because, <br>
 because there is so much sadness<br>
-And our mother earth cannot stand more<br>
+And our mother earth cannot take any more<br>
 The mockingbird no longer sings, that child no longer sings<br>
-Your neighbor does not tell you good morning like this<br>
-Because it is no longer the same of those times gone<br>
-And not even on the roads you can walk<br>
-You can walk, without fear without fear of dying<br>
+Your neighbor does not say "good morning," "how are you"<br>
+Because it is no longer the same as thos bygone times<br>
+And you can't even walk on the roads<br>
+You can walk, without fear, without fear of dying<br>
 Without fear, you can walk the villages<br>
-Without fear of having someone kidnap you to kidnap<br>
+Without fear of having someone kidnap you<br>
 Now this world is like that, now who can change it<br>
 Now this world is like that, now I have to tell you<br>
 How sad is this reality, God<br>
 You are the king of the world and on earth none<br>
-This can achieve, God<br>
-You own the world and only in a second<br>
-You can achieve, come guerrillas<br>
-And all armed group, and holding hands<br>
-Come let's look for peace, that tomorrow morning<br>
-Listen to the radio, which after so many years<br>
+can achieve this, God<br>
+You own the world and in a mere second<br>
+You can make guerrillas come<br>
+And all armed groups, holding hands<br>
+Come, let's look for peace, so that tomorrow morning<br>
+You hear on the radio that after so many years,<br>
 Colombia lives in peace<br>
-Without fear without fear of dying<br>
+Without fear, without fear of dying<br>
 Without fear, you can walk<br>
 Without fear, you can walk the villages<br>
-Without fear of having someone kidnap you to kidnap<br>
+Without fear of having someone kidnap you <br>
 Now this world is like that, now who can change it<br>
 Now this world is like that, now I have to tell you<br>
 How sad is this reality<br>
  <br>
 II<br>
 God give me back yesterday's time<br>
-Of knee I ask you to light the way<br>
+On my knees I ask you to light the way<br>
 Where there is no evil<br>
-Faith moves mountains I know, and here the enemy<br>
-The mountains have gone and the mountains return<br>
+Faith moves mountains, I know, and here the enemy<br>
+has gone to the mountains, and from the mountains he returns<br>
 And live as a brother and live as a friend<br>
 Because living together is living in peace<br>
-Because it is no longer the same of those times gone<br>
+Because it is no longer the same as those bygone times<br>
 And it is very sad that a child can no longer go to school<br>
  <br>
-Without fear without fear of dying<br>
+Without fear, without fear of dying<br>
 Without fear, you can walk<br>
 Without fear, you can walk the villages<br>
 Without fear of having someone kidnap you to kidnap<br>
@@ -212,19 +211,20 @@ Now this world is like that, now who can change it<br>
 Now this world is like that, now I have to tell you<br>
 How sad is this reality<br>
 God give me back yesterday's time<br>
-Of knee I ask you to light the way<br>
+On my knees I ask you to light the way<br>
 Where there is no evil<br>
-Faith moves mountains I know, and here the enemy<br>
-The mountains have gone and the mountains return<br>
+Faith moves mountains, I know, and here the enemy<br>
+has gone to the mountains, and from the mountains he returns<br>
 And live as a brother and live as a friend<br>
 Because living together is living in peace<br>
-Because it is no longer the same of those times gone<br>
+Because it is no longer the same as those bygone times<br>
 And it is very sad that a child can no longer go to school<br>
 </center>
 <br>&nbsp;<br>
-<i>""It was a special song for Peace and a good  show of the progress of the process, it speaks of the joy we all felt when we got up and knew that the war had been changed by reconciliation and that after so many years Colombia finally lives in peace."
-<br>Author: Raúl Oñate</i><br>
-Published on page 10 of  <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Cartilla.pdf"><b>La mama de la bibliotecas</b></a>. Cartilla vallenata. Escuela de Música Vallenata. Biblioteca Pública de Conejo. 2018.
+"It was a special song for Peace and a good demonstration of progress in the peace process. It speaks of the joy we all felt when we got up and knew that the war had given way to reconciliation and that after so many years, Colombia finally lives in peace."
+<br>
+<br>Author: Raúl Oñate<br>
+Published on page 10 of  <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Cartilla.pdf"><b>La mamá de la bibliotecas</b></a>. Cartilla vallenata. Escuela de Música Vallenata. Biblioteca Pública de Conejo. 2018.
 
    <br>
     <hr>
