--- a/ex-director.html
+++ b/ex-director.html
@@ -67,9 +67,13 @@
 
   </header>
 
-<section class="wrapper style8">
-<div class="inner">
-<img class="image left" src="http://people.virginia.edu/~mav4n/BPMP/images/Henry.png" /><br>
+  <section class="wrapper style8">
+  <div class="inner">
+  <div style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 50px 0px 50px;">
+  <table width="50%" border="1" cellpadding="0" cellspacing="0">
+  <tr valign="top">
+  <td><center><img align src="http://people.virginia.edu/~mav4n/BPMP/images/Henry.png" width="480" height="270" /></center><br>
+  <ul>
 Henry nos cuenta:
 <i>
 "Es Premio Nacional de Alta Gerencia en 2017. Departamento Administrativo de la Función Pública y Presidencia de la República de Colombia (Coordinador Nacional del Proyecto Bibliotecas Públicas para la Paz).
@@ -81,7 +85,15 @@ Henry nos cuenta:
 </p><p>Ponente, tallerista y conferencista en múltiples espacios regionales, nacionales e internacionales relacionados con la cultura, las bibliotecas, la innovación social, la comunicación y las manifestaciones de las letras y las artes.
 </p><p>Actualmente, se desempeña como <b>Gerente de Proyectos de Innovación Social en Compartamos con Colombia</b>.
 </i>
+</ul>
 
+
+
+</td>
+</tr>
+</table>
+</div>
+<i
 <br>
 <hr>
 <br>
