change galvez to galvis

--- a/bpm-las-morras.html
+++ b/bpm-las-morras.html
@@ -1,7 +1,7 @@
   <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pablo Iván Galvez Díaz</title>
+  <title>Pablo Iván Galvis Díaz</title>
   <meta name="description" content="Un archivo viviente. ">
   <!--[if lte IE 8]><script src="/js/ie/html5shiv.js"></script><![endif]-->
   <link rel="canonical" href="/mesa-redonda-2019">
@@ -33,7 +33,7 @@
 			 <a href="https://bibliopaz.scholarslab.org/ex-director.html">Henry García Gaviria</a> <br>
 			 <a href="https://bibliopaz.scholarslab.org/bpm-conejo.html">Gilberto Pabón Sandoval</a> <br>
 			 <a href="https://bibliopaz.scholarslab.org/bp-putumayo.html">Gloria Estella Nupán</a> <br>
-			 <a href="https://bibliopaz.scholarslab.org/bpm-las-morras">Pablo Iván Galvez Díaz</a> <br>
+			 <a href="https://bibliopaz.scholarslab.org/bpm-las-morras">Pablo Iván Galvis Díaz</a> <br>
 			 <a href="https://bibliopaz.scholarslab.org/bpm-gallo.html">Victor Solis Camacho</a> <br>
 			 <hr>
 			 <br>&nbsp;<br>
@@ -48,7 +48,7 @@
 	  <!-- Banner -->
 
   <header>
-    <h2>Pablo Iván Galvez Díaz</h2>
+    <h2>Pablo Iván Galvis Díaz</h2>
 	<b>Bibliotecario para la Paz durante 2017 en la vereda las Morras y en el Punto Transitorio <br>
 	de Normalización de las FARC en Mira Valle situados
 	en la municipalidad de San Vicente del Caguán<br>
@@ -140,7 +140,7 @@ De estos parajes de la ruralidad colombiana, San Vicente del Caguán, fue escena
 <br>&nbsp;<br>Un reto que al tiempo despertaba los temores más comunes al pensar vivir en la periferia de Colombia, y animaba a los bibliotecarios por ser los pioneros de esta tarea titánica de saldar parte de las deudas históricas con el campesinado de nuestro país. Y es así como empezó esta aventura de libros, campesinos, escrituras, bibliotecarios, esperanzas, excombatientes, paz
 y reconciliación ... </i>
 <br>&nbsp;<br>
-Sección del articulo publicado por Pablo Iván Galvez Díaz en el Espectador el 6 de mayo del 2018.
+Sección del articulo publicado por Pablo Iván Galvis Díaz en el Espectador el 6 de mayo del 2018.
 Consulte el artículo completo <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Pablo1.pdf"><b>aquí</b></a>
 
 <hr>
