--- a/bpm-las-morrasenglish.html
+++ b/bpm-las-morrasenglish.html
@@ -9,7 +9,7 @@
   <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pablo Iván Galvez Díaz</title>
+  <title>Pablo Iván Galvis Díaz</title>
   <meta name="description" content="A living archive. ">
   <!--[if lte IE 8]><script src="/js/ie/html5shiv.js"></script><![endif]-->
   <link rel="canonical" href="/mesa-redonda-2019">
@@ -42,7 +42,7 @@
 			 <a href="https://bibliopaz.scholarslab.org/ex-directorenglish.html">Henry García Gaviria</a> <br>
 			 <a href="https://bibliopaz.scholarslab.org/bpm-conejoenglish.html">Gilberto Pabón Sandoval</a> <br>
 			 <a href="https://bibliopaz.scholarslab.org/bp-putumayoenglish.html">Gloria Estella Nupán</a> <br>
-			 <a href="https://bibliopaz.scholarslab.org/bpm-las-morrasenglish">Pablo Iván Galvez Díaz</a> <br>
+			 <a href="https://bibliopaz.scholarslab.org/bpm-las-morrasenglish">Pablo Iván Galvis Díaz</a> <br>
 			 <a href="https://bibliopaz.scholarslab.org/bpm-galloenglish.html">Victor Solis Camacho</a> <br>
 			 <hr>
 			 <br>&nbsp;<br>
@@ -57,7 +57,7 @@
 	  <!-- Banner -->
 
   <header>
-    <h2>Pablo Iván Galvez Díaz</h2>
+    <h2>Pablo Iván Galvis Díaz</h2>
 	<b>Librarian for Peace during 2017 in the village of Las Morras <br>
        and in the Transitory Point of Normalization of the FARC Mira Valle,<br>
        both of which are located in the municipality of San Vicente del Caguán, <br>
@@ -149,7 +149,7 @@ One of these zones of Colombian rural life, San Vicente del Caguán, was the sce
 A challenge that at the time awoke the most common fears when thinking about living in the periphery of Colombia and encouraged the librarians to be pioneers of this titanic task of settling part of the historical debts with the peasantry of our country. And this is how this adventure of books, peasants, writings, librarians, hopes, ex-combatants, peace and reconciliation began ..."
 </i>
 </p><p>
-Section of the article published by Pablo Iván Galvez Díaz in El Espectador on May 6, 2018.
+Section of the article published by Pablo Iván Galvis Díaz in El Espectador on May 6, 2018.
 See the full article <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Pablo1.pdf"><b>here</b></a>
 </p><p>
 <hr>
