--- a/indexenglish.html
+++ b/indexenglish.html
@@ -58,7 +58,7 @@
 			 <a href="https://bibliopaz.scholarslab.org/ex-directorenglish.html">Henry García Gaviria</a> <br>
 			 <a href="https://bibliopaz.scholarslab.org/bpm-conejoenglish.html">Gilberto Pabón Sandoval</a> <br>
 			 <a href="https://bibliopaz.scholarslab.org/bp-putumayoenglish.html">Gloria Estella Nupán</a> <br>
-			 <a href="https://bibliopaz.scholarslab.org/bpm-las-morrasenglish">Pablo Iván Galvez Díaz</a> <br>
+			 <a href="https://bibliopaz.scholarslab.org/bpm-las-morrasenglish">Pablo Iván Galvis Díaz</a> <br>
 			 <a href="https://bibliopaz.scholarslab.org/bpm-galloenglish.html">Victor Solis Camacho</a> <br>
 			 <hr>
 			 <br>&nbsp;<br>
