--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
 			 <a href="https://bibliopaz.scholarslab.org/ex-director.html">Henry García Gaviria</a> <br>
 			 <a href="https://bibliopaz.scholarslab.org/bpm-conejo.html">Gilberto Pabón Sandoval</a> <br>
 			 <a href="https://bibliopaz.scholarslab.org/bp-putumayo.html">Gloria Estella Nupán</a> <br>
-			 <a href="https://bibliopaz.scholarslab.org/bpm-las-morras">Pablo Iván Galvez Díaz</a> <br>
+			 <a href="https://bibliopaz.scholarslab.org/bpm-las-morras">Pablo Iván Galvis Díaz</a> <br>
 			 <a href="https://bibliopaz.scholarslab.org/bpm-gallo.html">Victor Solis Camacho</a> <br>
 			 <hr>
 
