pablo english edits

--- a/bpm-las-morras.html
+++ b/bpm-las-morras.html
@@ -146,7 +146,7 @@ Consulte el artículo completo <a target="_blank" href="http://people.virginia.e
 <hr>
 
 
-<h4>Escuchar, Dialogar y escribir: El bibliotecario que promueve narraciones "farctásticas"</h4>
+<h2>Escuchar, Dialogar y escribir: El bibliotecario que promueve narraciones "farctásticas"</h2>
 
 <i>"... En Mira Valle, sentados alrededor de una mesa larga, varios guerrilleros escuchan la historia que Kevin tiene escrita en su cuaderno: El viejito de Ítaca tuvo 14 hijos con María. Una mañana despertó para darse cuenta de que a ella le faltaba una pierna y para ver cómo, por la puerta de su casa, desaparecía la rana que se la llevaba en la boca.
 <br>&nbsp;<br>
@@ -176,6 +176,15 @@ otro <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/P
 Tambien pueden leer <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Pablosendero.pdf"><b>un diario</b></a> publicado en la revista a la <i>Orilla del rio</i> el 6 de julio del 2018 o  el <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Pablovereda.pdf"><b>borrador</b></a> del diario del primer día de reapertura de la Biblioteca Pública de Morras, luego de cuatro meses de cierre.
 <br>&nbsp;<br>
 Consulte el artículo publicado tras la visita del escritor  <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Pabloalfredo.pdf"><b>Alfredo Molano</b></a> a San Vicente del Caguán
+
+<hr>
+<h2>Biblioteca Pública Clara Inés Campos Perdomo, Ganadora del Premio Daniel Samper Ortega (2015)</h2>
+<p>Antes de trasladarse a Las Morras, Pablo trabajó en la Biblioteca Pública Clara Inés Campos Perdomo en San Vicente del Caguán. Como miembro del Grupo de Amigos de esta biblioteca, fue postulador al premio Daniel Samper Ortega en 2015. Gracias a sus esfuerzos, la biblioteca ganó el premio y llegó a ser un referente a nivel nacional en materia de trabajo de memoria histórica, extensión rural e identidad del pueblo.</p>
+<p>El siguiente video resume la experiencia de esta biblioteca, destacando cómo "en un municipio estigmatizado por el conflicto armado ... la Biblioteca Pública Clara Inés Campos Perdomo surge como un espacio neutral en donde la promoción de la lectura y el rescate de la memoria se suman para borrar las huellas negativas que ha dejado el pasado."</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/I5vGmy_rbMI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #FFFFFF; background-color: transparent; text-decoration: none;">
+  <br><i>"Premio Nacional de Bibliotecas Públicas Daniel Samper Ortega, Biblioteca Pública Clara Inés Campos Perdomo", <br> 1 de septiembre 2015</i></span>
+
 </div>
 </section>
 
