--- a/bpm-las-morrasenglish.html
+++ b/bpm-las-morrasenglish.html
@@ -181,6 +181,16 @@ Pablo has organized creative writing workshops, using the short story and person
 You can also read a <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Pablosendero.pdf"><b>personal journal </b></a>published in the magazine <i> A Las Orillas del rio</i> on July 6, 2018, or the <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Pablovereda.pdf"><b>draft</b></a> of his personal diary about the first day of the reopening of the Morras Public Library, after four months of closure due to violence in the region.
 <br>&nbsp;<br>
 You can also consult the article published after the visit of writer <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Pabloalfredo.pdf"><b>Alfredo Molano</b></a> to San Vicente del Caguán.
+
+<hr>
+<h2>Clara Inés Campos Perdomo Public Library Wins the 2015 Daniel Samper Ortega Prize</h2>
+<p>Before branching out to Las Morras, Pablo worked at the Clara Inés Campos Perdomo Public Library in San Vicente del Caguán (Caquetea). As a member of this library's Group of Friends, he was the principal applicant to the 2015 Daniel Samper Ortega Prize. Thanks to his efforts, the library was awarded the prize and became a national model in areas such as historical memory, rural extension and collective identity.</p>
+<p>The following video sums up the experience of this library, highlighting how "in a town stigmatized by armed conflict ... the Clara Inés Campos Perdomo Public Library emerges as a neutral space where reading and recovering local memory work together to erase the footprints that the past has left behind."</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/I5vGmy_rbMI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #FFFFFF; background-color: transparent; text-decoration: none;">
+  <br><i>"Premio Nacional de Bibliotecas Públicas Daniel Samper Ortega, Biblioteca Pública Clara Inés Campos Perdomo", <br> September 1, 2015</i></span>
+
+
 </div>
 </section>
 
