--- a/bpm-gallo.html
+++ b/bpm-gallo.html
@@ -141,7 +141,7 @@ Los mulos llegaron en canoas y atravesaron las montañas e invitaron a su paso a
 <div class="gallery">
   <div>
       <iframe src="https://www.youtube.com/embed/5BgVhgHr0zY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <p>"Victor Solis. El trabajo del bibliotecario pata la Paz"</p>
+      <p>"Victor Solis. El trabajo del bibliotecario para la Paz"</p>
     </div>
     <div>
         <iframe src="https://www.youtube.com/embed/fXtJOJX-5tM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
