--- a/bpm-galloenglish.html
+++ b/bpm-galloenglish.html
@@ -123,33 +123,22 @@ The mules arrived in canoes and crossed the mountains and invited children and a
 <br>&nbsp;<br>
 
 <div style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<table width="100%" border="1" cellpadding="1" cellspacing="1" style="background-color: #a5a09d">
-<tr valign="top">
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/5BgVhgHr0zY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br />
-<p style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<i><b>Victor Solis. "The work of the librarian for Peace"</b></i></span></p>
-</td>
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/fXtJOJX-5tM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<i><b>Video of support for activities made<br>by the Gallo Public Library during 2017</i></b></span></p>
-</td>
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/NX3UdLLklHY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br /><i><b>"The community of the area has appropriated the mobile library" (Víctor Solís)</i> (Víctor Solís)</b></span></p>
-</td>
-</tr>
-</table>
-</div>
+  <div class="gallery">
+    <div>
+        <iframe src="https://www.youtube.com/embed/5BgVhgHr0zY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>"Victor Solis. The Work of a Peace Librarian"</p>
+      </div>
+      <div>
+          <iframe src="https://www.youtube.com/embed/fXtJOJX-5tM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <p>Video supporting the activities of the Gallo Public Library in 2017</p>
+        </div>
+        <div>
+            <iframe src="https://www.youtube.com/embed/NX3UdLLklHY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>"The community has taken over the mobile library" (Víctor Solís)</p>
+          </div>
+  </div>
+  </div>
 
-
-
-
-<br>
 <center>
 <hr>
 </center>
@@ -157,10 +146,16 @@ The mules arrived in canoes and crossed the mountains and invited children and a
 <center>
 <h4><i>The "literary canoe" and the "muloteca"</i></h4>
 <p>The influence of the <i>Public Library for Peace</i> was extended to the indigenous communities thanks the "literary canoe" and the "muloteca".</p>
-<iframe width="400" height="250" src="https://www.youtube.com/embed/nAhSxR8mppI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="400" height="250" src="https://www.youtube.com/embed/sh5m9roLTto" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="400" height="250" src="https://www.youtube.com/embed/13-sT7PdmCk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="400" height="250" src="https://www.youtube.com/embed/w7dQsyn9-90" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="gallery">
+  <div>
+  <iframe width="400" height="250" src="https://www.youtube.com/embed/nAhSxR8mppI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+  <div>
+  <iframe width="400" height="250" src="https://www.youtube.com/embed/sh5m9roLTto" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+  <div>
+  <iframe width="400" height="250" src="https://www.youtube.com/embed/13-sT7PdmCk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+  <div>
+  <iframe width="400" height="250" src="https://www.youtube.com/embed/w7dQsyn9-90" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+</div>
 </center>
 <br>
 <center>
@@ -180,74 +175,54 @@ One of the activities that had the most impact within the community was the orga
 Here you can see the results of the series entitled <i>"Gallo Hagamos cine"</i>
 <br>&nbsp;<br>
 
- <div style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<table width="100%" border="1" cellpadding="1" cellspacing="1" style="background-color: #a5a09d">
-<tr valign="top">
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/pwr4-7uZzbY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<i>01. Servicio Innovador Gallo Hagamos Cine. 2 minutos </i></span></p>
-</td>
-<td style="border-width : 0px;">
-<video controls="true" width="300px" height="250px" preload="auto" playsinline="" src="https://virginia.box.com/shared/static/sx8ugy3t9qxzqvk5o9wt0e9i2cwovgw7.mp4" style="width: 400px;" loop=""></video>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br><i>01 Gallo Hagamos Cine 2: La Gente del Maíz - eXpedición Sinú  | Tierralta Córdoba. 10'59"</i></span></p>
-</td>
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/HY_pvvoZiiU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br /><i>02 Gallo Hagamos Cine 2: Algo Bueno Está Pasando - eXpedición Sinú | Tierralta Córdoba</i> (Víctor Solís)</span></p>
-</td>
-</tr>
-</table>
-</div>
-<br>
+<section>
+  <div class="gallery">
+    <div>
+        <iframe width="300" height="250" src="https://www.youtube.com/embed/pwr4-7uZzbY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>01. Servicio Innovador Gallo Hagamos Cine. 2 minutos</p>
+    </div>
+    <div>
+        <video controls="true" width="300px" height="250px" preload="auto" playsinline="" src="https://virginia.box.com/shared/static/sx8ugy3t9qxzqvk5o9wt0e9i2cwovgw7.mp4" style="width: 300px;" loop=""></video>
+        <p>01 Gallo Hagamos Cine 2: La Gente del Maíz - eXpedición Sinú  | Tierralta Córdoba. 10'59"</p>
+    </div>
+    <div>
+        <iframe width="300" height="250" src="https://www.youtube.com/embed/HY_pvvoZiiU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>02 Gallo Hagamos Cine 2: Algo Bueno Está Pasando - eXpedición Sinú | Tierralta Córdoba</p>
+    </div>
+  </div>
+</section>
+
 <h4>The series: <i>"Gallo, as you've never seen it"</i></h4>
 To understand the genesis of this series, read this article <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Victorcine.pdf"><b><i>"Gallo as you had never seen it, the documentary series that shows the other side of this region"</i></a>, published by Lina Otálvaro in <i>En Red</i>, number 12, May 2018. pages 26-30.
-<br>&nbsp;<br>
-<div style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<table width="100%" border="1" cellpadding="1" cellspacing="1" style="background-color: #a5a09d">
-<tr valign="top">
-<td style="border-width : 0px;">
-<video controls="true" width="300px" height="250px" preload="auto" playsinline="" src="https://virginia.box.com/shared/static/somnko4mx97r9fmc2j9y571ftkirsiwd.mp4" style="width: 400px;" loop=""></video> </span>
-<p style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<i>01. Gallo, Un Pedacito de Colombia 3' 56"</i></span></p>
-</td>
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/qqjvlrVRvSk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br><i>02. Agua Dulce. 15' 26"</i></span></p>
-</td>
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/RyAK-lMtb8U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<BR><i>03. Se habla costeñol. 19' 57"</i></span></p>
-</td>
-</tr>
-<tr>
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/HKqCjH4cLyI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<i>4. Soy leyenda. 11'10"</i></span></p>
-</td>
-<td style="border-width : 0px;">
-<iframe width="300" height="250" src="https://www.youtube.com/embed/hyVguW61G_s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br><i>05 Crónicas de PAZ en el ETCR Gallo. 10'34"</i></span></p>
-</td>
-<td style="border-width : 0px;">
-<video controls="true" width="300px" height="250px" preload="auto" playsinline="" src="https://virginia.box.com/shared/static/dm9ku2ayw5vt048aa061545whvu202u7.mp4" style="width: 400px;" loop=""></video>
-<span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br /><i>06 Sobre los Guarumos</i> 20' 06"</span></p>
-</td>
-</tr>
-</table>
-</div>
+  <section>
+    <div class="gallery">
+      <div>
+          <video controls="true" preload="auto" playsinline="" src="https://virginia.box.com/shared/static/somnko4mx97r9fmc2j9y571ftkirsiwd.mp4" loop=""></video>
+          <p>01. Gallo, Un Pedacito de Colombia 3' 56"</p>
+      </div>
+      <div>
+          <iframe width="300" height="250" src="https://www.youtube.com/embed/qqjvlrVRvSk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <p>02. Agua Dulce. 15' 26"</p>
+      </div>
+      <div>
+          <iframe width="300" height="250" src="https://www.youtube.com/embed/RyAK-lMtb8U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <p>03. Se habla costeñol. 19' 57"</p>
+      </div>
+      <div>
+          <iframe width="300" height="250" src="https://www.youtube.com/embed/HKqCjH4cLyI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <p>4. Soy leyenda. 11'10"</p>
+      </div>
+      <div>
+          <iframe width="300" height="250" src="https://www.youtube.com/embed/hyVguW61G_s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <p>05 Crónicas de PAZ en el ETCR Gallo. 10'34"</p>
+      </div>
+      <div>
+          <video controls="true" width="300px" height="250px" preload="auto" playsinline="" src="https://virginia.box.com/shared/static/dm9ku2ayw5vt048aa061545whvu202u7.mp4" style="width: 400px;" loop=""></video>
+          <p>06 Sobre los Guarumos</p>
+      </div>
+    </div>
+  </section>
 
-<br>
 <center>
 <hr>
 </center>
