--- a/videostreamingenglish.html
+++ b/videostreamingenglish.html
@@ -69,8 +69,7 @@
 <section class="wrapper style8">
 <div class="inner">
 
-On this page will be included before June 28 the instructions to see the panel live on the internet.
-
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/-n7dmJNM0TA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 	   </div>
