--- a/videostreaming.html
+++ b/videostreaming.html
@@ -14,8 +14,8 @@
   <meta name="description" content="Un archivo viviente. ">
   <!--[if lte IE 8]><script src="/js/ie/html5shiv.js"></script><![endif]-->
   <link rel="canonical" href="/mesa-redonda-2019">
-  <link rel="stylesheet" href="https://bibliopaz.scholarslab.org/assets/css/main.css" />
-  <link rel="stylesheet" href="http://people.virginia.edu/~mav4n/BPMP/css/piedefoto.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/piedefoto.css" />
  <link rel="alternate" type="application/rss+xml" title="Bibliotecas para la Paz" href="/feed.xml">
 </head>
 
@@ -67,10 +67,22 @@
 
  
 
-<section class="wrapper style8">
+<section class="wrapper style 8">
 <div class="inner">
+  <section>
+    <div class="box alt">
+      <div class="row gtr-50 gtr-uniform">
+        <div class="col-12">
+          <span class="video iframe">
+              <iframe src="https://www.youtube.com/embed/-n7dmJNM0TA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </span>
+        </div>
+      </div>
+    </div>
+    
+  </section>
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/-n7dmJNM0TA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  
 
 
 
